# api/lambdas/user_manager/openapi/api.go
@@ -21,6 +21,7 @@ type AdminApiRouter interface {
 	AddAnnouncement(http.ResponseWriter, *http.Request)
 	DeleteAnnouncements(http.ResponseWriter, *http.Request)
 	GetAdmins(http.ResponseWriter, *http.Request)
+	SearchSignedUpUsers(http.ResponseWriter, *http.Request)
 	SetCatechismData(http.ResponseWriter, *http.Request)
 	SetCommitteeData(http.ResponseWriter, *http.Request)
 	SetServiceData(http.ResponseWriter, *http.Request)
@@ -61,6 +62,7 @@ type AdminApiServicer interface {
 	AddAnnouncement(context.Context, Announcement) (ImplResponse, error)
 	DeleteAnnouncements(context.Context, []string) (ImplResponse, error)
 	GetAdmins(context.Context) (ImplResponse, error)
+	SearchSignedUpUsers(context.Context, string) (ImplResponse, error)
 	SetCatechismData(context.Context, PageContent) (ImplResponse, error)
 	SetCommitteeData(context.Context, PageContent) (ImplResponse, error)
 	SetServiceData(context.Context, PageContent) (ImplResponse, error)
